--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>URL Shortener Microservice</title>
+        <title>Image Abstraction Layer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -16,40 +16,42 @@
             </div>
             <div>
                 <div>
-                    <h1>API Basejump: URL Shortener Microservice</h1>
+                    <h1>API Basejump: Image Abstraction Layer</h1>
                 </div>
                 <div class=''>
                     <h3> User Stories: </h3>
                     <ul class='list-group'>
-                        <li class='list-group-item'>I can pass a URL as a parameter and I will receive a shortened URL in the JSON response.</li>
-                        <li class='list-group-item'> If I pass an invalid URL that doesn't follow the valid http://www.example.com format, the JSON response will contain an error instead.</li>
-                        <li class='list-group-item'>When I visit that shortened URL, it will redirect me to my original link</li>
+                        <li class='list-group-item'>I can get the image URLs, alt text and page urls for a set of images relating to a given search string.</li>
+                        <li class='list-group-item'> I can paginate through the responses by adding a ?offset=2 parameter to the URL.</li>
+                        <li class='list-group-item'>I can get a list of the most recently submitted search strings.</li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Example creation usage:</h3>
+                    <h3>Example search usage:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>https://aqueous-savannah-48973.herokuapp.com/new/http://www.google.com</li>
-                        <li class='list-group-item example'>https://aqueous-savannah-48973.herokuapp.com/new/www.google.com</li>
-                        <li class='list-group-item example'>https://aqueous-savannah-48973.herokuapp.com/new/http://google.com</li>
+                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/imageSearch/books</li>
+                    </ul>
+                    <h3>Example search with offset usage:</h3>
+                    <ul class='list-group'>
+                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/imageSearch/books?offset=10</li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Example creation output:</h3>
+                    <h3>Example search result:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>{"url":"http://www.google.com","shortURL":"https://aqueous-savannah-48973.herokuapp.com/7"}</li>
+                        <li class='list-group-item example'>[{"url":"http://www.uglydogbooks.com/wp-content/uploads/2014/04/books.jpg","snippet":"... Ugly Dog Books · Website ...","thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRus5TbIy1tKDT-F5FRHGx35no2RrjFbCZjiPwvL5XBVboe6O213VsB9Co","context":"http://www.uglydogbooks.com/"},{"url":"https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAeCAAAAJDdlYjEyNzU5LTQwYjctNGExYy1hNGJlLTc5YmVkZTY3NzQ2MA.jpg","snippet":"5 Must Read Books for ...","thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKthADA_jidATK6FYny3UoXShhjyrqPbwGrKGhk-47nBOSGmnwru8giksh","context":"https://www.linkedin.com/pulse/5-must-read-books-healthcare-leaders-joe-mull-"},]</li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Usage:</h3>
+                    <h3>Search history usage:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>https://aqueous-savannah-48973.herokuapp.com/7</li>
+                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/latest/imageSearch/</li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Will redirect to:</h3>
+                    <h3>Example search history result:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>http://www.google.com</li>
+                        <li class='list-group-item example'>[{"_id":"58aa2f6305f3e3271c34e1c6","search":"books","time":"Sun Feb 19 2017 23:50:59 GMT+0000 (UTC)"},{"_id":"58aa27fe32ebc4269c3d0c10","search":"snowmobile","time":"Sun Feb 19 2017 23:19:26 GMT+0000 (UTC)"},{"_id":"58aa2610e890e1261e58fdb7","search":"snow","time":"Sun Feb 19 2017 23:11:12 GMT+0000 (UTC)"}]</li>
                     </ul>
                 </div>
             </div>
