Updated URLs in examples.

--- a/views/home.html
+++ b/views/home.html
@@ -29,11 +29,11 @@
                 <div>
                     <h3>Example search usage:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/imageSearch/books</li>
+                        <li class='list-group-item example'>https://boiling-dawn-66567.herokuapp.com/api/imageSearch/books</li>
                     </ul>
                     <h3>Example search with offset usage:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/imageSearch/books?offset=10</li>
+                        <li class='list-group-item example'>https://boiling-dawn-66567.herokuapp.com/api/imageSearch/books?offset=10</li>
                     </ul>
                 </div>
                 <div>
@@ -45,7 +45,7 @@
                 <div>
                     <h3>Search history usage:</h3>
                     <ul class='list-group'>
-                        <li class='list-group-item example'>https://fcc-image-search-abstraction-layer-lah4lifecloud9.c9users.io/api/latest/imageSearch/</li>
+                        <li class='list-group-item example'>https://boiling-dawn-66567.herokuapp.com/api/latest/imageSearch/</li>
                     </ul>
                 </div>
                 <div>
